# fuzzklang.net

./: .gitignore  deploy.sh  run.sh
.github/: dependabot.yml
homepage/: package-lock.json  package.json
homepage/src/: app.html
homepage/src/routes/: +page.svelte
proxy-server-nginx/: Dockerfile  docker-compose.yaml  nginx.conf
proxy-server-nginx/html/: index.html
webserver-python/: .gitignore  Dockerfile  pyproject.toml
webserver-python/app/: main.py
