[tool.poetry]
name = "app"
version = "0.1.0"
description = "Simple API for serving requests"
authors = ["Terje Sylvarnes <fuzzklang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.2"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
