[tool.poetry]
name = "app"
version = "0.1.0"
description = "Simple API for serving requests"
authors = ["Terje Sylvarnes <fuzzklang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
